# context-architecture-blueprint

./: .gitignore  AUTHORS  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: privacy.yaml  scoring_contract.yaml
corpora/calibration/: cases.yaml
corpora/calibration/anti_gaming/: handbook.md  retention_a.md  retention_b.md
corpora/calibration/bad_contradiction/: security_a.md  security_b.md
corpora/calibration/bad_missing_metadata/: doc1.md  doc2.md
corpora/calibration/bad_stale/: policy_old.md  runbook_old.md
corpora/calibration/good_modest/: handling.md  intro.md
corpora/calibration/good_strong/: governance.md  lifecycle.md  overview.md
corpora/demo/: 01_product_overview.md  02_onboarding_guide.md  03_data_retention_policy.md  04_api_reference.md
corpora/fixtures/polished_contradiction/: access_runbook.md  data_handling.md  glossary.md  security_policy.md
docs/: developer-guide.md  provider-reference.md  user-guide.md
examples/reference-service/: Dockerfile  README.md  app.py  requirements.txt
examples/reference-service/tests/: conftest.py  test_app_smoke.py  test_ingestion_security.py
src/cab/: __init__.py  calibration.py  cli.py  models.py  pipeline.py  privacy.py
src/cab/analysis/: __init__.py  deterministic.py  embeddings.py  engine.py  judge.py
src/cab/cost/: __init__.py  limits.py
src/cab/ingestion/: __init__.py  caps.py  (+5 more)
tests/: test_adversarial_ingestion.py  test_architecture_guard.py  test_blueprint_manifest.py  test_boundary.py  test_calibration_gate.py  test_calibration_twosided_meta.py  test_canary_error_path.py  test_concurrency_isolation.py  test_cost_cap.py  test_demo_mode.py  test_deterministic_checks.py  test_dual_run_missing_dim.py  test_email_gate.py  test_false_high.py  test_golden_path.py  test_ingestion_no_retention.py  test_judge_model_config.py  test_judge_parsing.py  test_judge_temperature.py  test_live_judge.py  test_llm_judge.py  test_manifest_f_fixes.py  test_pdf_brand.py  test_privacy_spans_ttl.py  test_report_render.py  test_reproducibility.py  test_scoring_banding.py
(+13 files in other folders)
