[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context-architecture-blueprint"
version = "0.1.0"
description = "The Context Architecture Blueprint — a working instrument of The Comprehension Standard. Scores how AI-ready a knowledge corpus is across seven dimensions."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Wilfred Morgan" }]
keywords = [
    "ai-readiness",
    "llm-evaluation",
    "llm-as-judge",
    "rag",
    "context-engineering",
    "document-intelligence",
    "evals",
    "cli",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/wmemorgan/context-architecture-blueprint"
Repository = "https://github.com/wmemorgan/context-architecture-blueprint"

[project.scripts]
cab = "cab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

# ── Formatting / linting / typing (CI-enforced) ──────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic, high-signal rule set: pyflakes (F), pycodestyle errors (E),
# import ordering (I), pyupgrade (UP), flake8-bugbear (B).
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501", # line length is governed by black, not ruff
    "B008", # allow function calls in argument defaults (used in a few adapters)
]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally place a few imports after an explanatory comment block.
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
